@@ -1,24 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
-      xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
-      xmlns:ts="http://typo3.org/ns/TYPO3/TypoScript/ViewHelpers"
-      xmlns:neos="http://typo3.org/ns/TYPO3/Neos/ViewHelpers">
-
-<f:section name="breadcrumb">
-    <f:if condition="{items}">
-        <ol{attributes -> f:format.raw()}>
-        <f:for each="{items}" as="item" reverse="TRUE">
-            <li{ts:render(path:'{item.state}.attributes') -> f:format.raw()}>
-            <f:if condition="{item.state} == 'current'">
-                <f:then>
-                    {item.label}
-                </f:then>
-                <f:else>
-                    <neos:link.node node="{item.node}">{item.label}</neos:link.node>
-                </f:else>
-            </f:if>
-            </li>
-        </f:for>
-        </ol>
-    </f:if>
-</f:section>
